# matlab_llvm

./: .gitignore  CMakeLists.txt  README.md  justfile
docs/: README.md  complex.md  debug.md  emit_c_cpp.md  emit_cpp_classdef.md  emit_python.md  emit_systemc.md  emit_systemverilog.md  feature_status.md  lsp.md  repl.md
examples/: README.md  anon_capture.m  bank_account.m  eigendecomp.m  factorial.m  fibonacci.m  for_loop.m  func_handles.m  hello.m  is_old.m  logical_mask.m  matrix_mult.m  parfor.m  solve_linear.m  stats.m  traffic_action.m  while_loop.m
include/matlab/AST/: AST.h  ASTDumper.h  Formatter.h
include/matlab/Basic/: Diagnostic.h  SourceManager.h
include/matlab/Lex/: Lexer.h  Token.h  TokenKinds.def
include/matlab/MIR/: Builder.h  Lowering.h  MIR.h  Printer.h
include/matlab/MLIR/: Context.h  Lowering.h  TypeMapper.h
include/matlab/MLIR/Dialect/: MatlabDialect.h
include/matlab/MLIR/Passes/: Passes.h
include/matlab/Parse/: Parser.h
include/matlab/Sema/: Resolver.h  Scope.h  SemaDumper.h  Type.h  TypeInference.h
lib/AST/: AST.cpp  ASTDumper.cpp  Formatter.cpp
lib/Basic/: Diagnostic.cpp  SourceManager.cpp
lib/Lex/: Lexer.cpp
lib/MIR/: Builder.cpp  Lowering.cpp  MIR.cpp  Printer.cpp
lib/MLIR/: Context.cpp  Lowering.cpp  TypeMapper.cpp
lib/MLIR/Dialect/: MatlabDialect.cpp
lib/MLIR/Passes/: EmitC.cpp  EmitPython.cpp  IfStoreToSelect.cpp  LowerAnonCalls.cpp  LowerIO.cpp  LowerParfor.cpp  LowerScalarSlots.cpp  LowerScalarsToArith.cpp  LowerSeqLoops.cpp  LowerTensorOps.cpp  LowerToLLVMIR.cpp  LowerUserCalls.cpp  Mem2RegLite.cpp  SlotPromotion.cpp
lib/Parse/: Parser.cpp
lib/Sema/: Resolver.cpp  Scope.cpp  SemaDumper.cpp  Type.cpp  TypeInference.cpp
runtime/: build_and_run.sh  matlab_runtime.c  matlab_runtime.h  matlab_runtime.hpp  matlab_runtime.py
test/: run_tests.sh
test/EmitC/: comments_mixed.c.expected  comments_mixed.cpp.expected  comments_mixed.doxy.cpp.expected  comments_mixed.m  disp_variants.c.expected  disp_variants.cpp.expected  disp_variants.m  if_slot.auto.cpp.expected  if_slot.c.expected  if_slot.cpp.expected  if_slot.m  if_ternary.c.expected  if_ternary.cpp.expected  if_ternary.m  parens_expr.c.expected  parens_expr.cpp.expected  parens_expr.m  parfor_present.c.expected  parfor_present.cpp.expected  parfor_present.m  run_tests.sh  strings_with_percent.c.expected  strings_with_percent.cpp.expected  strings_with_percent.m  while_loop.c.expected  while_loop.cpp.expected  while_loop.m
test/EmitCFail/: mod_builtin.m  mod_builtin.stderr  run_tests.sh
test/Errors/: bad_expr.expected  bad_expr.m  bad_lvalue.expected  bad_matrix.expected  bad_matrix.m  missing_end.expected  missing_end.m
test/Lexer/: comments_and_continuation.expected  comments_and_continuation.m  numbers.expected  numbers.m  strings.expected  strings.m  transpose_vs_string.expected  transpose_vs_string.m
test/MIR/: anon_and_handle.expected  call_vs_index.expected  for_loop.expected  for_loop.m  function_with_outputs.expected  function_with_outputs.m  if_else.expected  if_else.m  literals_and_arith.expected  literals_and_arith.m  matrix_ops.expected  matrix_ops.m  range_and_index.expected  range_and_index.m  while_loop.expected
test/MLIR/: call_vs_index.expected  call_vs_index.m  for_loop.expected  function_with_outputs.expected  handles.expected  handles.m  if_else.expected  literals_and_arith.expected  matrix_ops.expected  while_loop.expected  while_loop.m
test/Opt/: comparisons.expected  comparisons.m  for_loop_preserves_cross_block_slots.expected  mixed_array_and_scalar.expected  mixed_array_and_scalar.m  straight_line_arith.expected  straight_line_arith.m  unary_neg.expected  unary_neg.m
test/Parser/: anon_and_handle.expected  anon_and_handle.m  command_syntax.expected  command_syntax.m  control_flow.expected  control_flow.m  end_in_indexing.expected  end_in_indexing.m  expressions.expected  expressions.m  function_file.expected  function_file.m  matrix_whitespace.expected  matrix_whitespace.m  multi_assign.expected  multi_assign.m
test/Programs/: absval.expected  absval.m  addmul.expected  addmul.m  addmul_call.expected  addmul_call.m  anonfunc.expected  anonfunc.m  arith_precedence.expected  arith_precedence.m  classify.expected  classify.m  elemwise.expected  elemwise.m  fact.expected  fact.m  hello.expected  horizontal_concat.expected  horizontal_concat.m  index_vectors.expected  index_vectors.m  indexed_assign.expected  indexed_assign.m  indexing.expected  indexing.m  io_add.expected  io_add.m  literals.m  loop_echo.expected  loop_echo.m  matmul_by_loops.expected  matmul_by_loops.m  matmul_fn.expected  matmul_fn.m  matmul_shapes.expected  matmul_shapes.m  matrix_add_sub.expected  matrix_add_sub.m  matrix_fn_submatrix.expected  matrix_fn_submatrix.m  (+20 more)
test/Run/: cell_basic.m  cell_basic.stdout  cell_lhs.m  cell_lhs.stdout  cell_predicates.m  cell_predicates.stdout  class_basic.m  class_basic.stdout  class_dependent.m  class_dependent.stdout  class_enum.m  class_enum.stdout  class_inherit.m  class_inherit.stdout  class_operators.m  class_operators.stdout  complex_basic.m  complex_basic.stdout  ctrl_break.m  ctrl_break.stdout  ctrl_catch_me.m  ctrl_catch_me.stdout  ctrl_continue.m  ctrl_continue.stdout  ctrl_for_nested.m  ctrl_for_simple.m  ctrl_for_step.m  ctrl_for_step.stdout  ctrl_try_catch.m  ctrl_while.m  disp_1x1.m  disp_column_vec.m  disp_column_vec.stdout  disp_column_vec.stdout-python  disp_floats_mat.m  disp_floats_mat.stdout  disp_floats_mat.stdout-python  disp_mat.m  disp_mat.stdout  disp_mat.stdout-python  (+239 more)
test/Sema/: call_vs_index.expected  call_vs_index.m  comparisons_and_logical.expected  comparisons_and_logical.m  control_flow_join.expected  control_flow_join.m  handle_and_anon.expected  handle_and_anon.m  literals.expected  literals.m  loop_types.expected  shape_inference.expected  shape_inference.m  undefined_name.expected  undefined_name.m
tools/matlab-lsp/: main.cpp
tools/matlabc/: main.cpp
